--- a/Parser/Parser.fsproj
+++ b/Parser/Parser.fsproj
@@ -1,16 +1,11 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <OutputType>Exe</OutputType>
         <TargetFramework>netcoreapp3.1</TargetFramework>
     </PropertyGroup>
 
     <ItemGroup>
-        <Compile Include="Program.fs" />
-    </ItemGroup>
-
-    <ItemGroup>
-      <ProjectReference Include="..\Parser\Parser.fsproj" />
+        <Compile Include="Library.fs"/>
     </ItemGroup>
 
 </Project>
