--- a/Parser/Parser.fsproj
+++ b/Parser/Parser.fsproj
@@ -5,7 +5,8 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <Compile Include="Library.fs"/>
+        <Compile Include="Common.fs" />
+        <Compile Include="Library.fs" />
     </ItemGroup>
 
 </Project>
