--- a/Parser/Parser.fsproj
+++ b/Parser/Parser.fsproj
@@ -6,7 +6,7 @@
 
     <ItemGroup>
         <Compile Include="Common.fs" />
-        <Compile Include="Library.fs" />
+        <Compile Include="Core.fs" />
     </ItemGroup>
 
 </Project>
