--- a/Parser/Parser.fsproj
+++ b/Parser/Parser.fsproj
@@ -7,6 +7,7 @@
     <ItemGroup>
         <Compile Include="Core.fs" />
         <Content Include="Readme.md" />
+        <Compile Include="Sandbox.fs" />
     </ItemGroup>
 
 </Project>
