--- a/ConsoleOutput/ConsoleOutput.fsproj
+++ b/ConsoleOutput/ConsoleOutput.fsproj
@@ -10,6 +10,8 @@
     </ItemGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\GameEngine\GameEngine.fsproj" />
+      <ProjectReference Include="..\Game\Game.fsproj" />
       <ProjectReference Include="..\Parser\Parser.fsproj" />
     </ItemGroup>
 
