--- a/GameEngine/GameEngine.fsproj
+++ b/GameEngine/GameEngine.fsproj
@@ -11,6 +11,7 @@
         <Compile Include="Domain.fs" />
         <Compile Include="World.fs" />
         <Compile Include="SandBox.fs" />
+        <Compile Include="State.fs" />
     </ItemGroup>
 
 </Project>
