--- a/GameEngine/GameEngine.fsproj
+++ b/GameEngine/GameEngine.fsproj
@@ -10,7 +10,7 @@
         <Compile Include="Core.fs" />
         <Compile Include="Domain.fs" />
         <Compile Include="World.fs" />
-        <Compile Include="SandBox.fs" />
+        <Compile Include="GameEngineSandbox.fs" />
         <Compile Include="State.fs" />
     </ItemGroup>
 
