--- a/Game/Game.fsproj
+++ b/Game/Game.fsproj
@@ -7,7 +7,7 @@
     <ItemGroup>
         <Compile Include="Domain.fs" />
         <Compile Include="Core.fs" />
-        <Compile Include="Sandbox.fs" />
+        <Compile Include="Snake.fs" />
     </ItemGroup>
 
     <ItemGroup>
