--- a/Game/Game.fsproj
+++ b/Game/Game.fsproj
@@ -8,6 +8,7 @@
         <Compile Include="Domain.fs" />
         <Compile Include="Core.fs" />
         <Compile Include="Snake.fs" />
+        <Compile Include="Rpg.fs" />
     </ItemGroup>
 
     <ItemGroup>
