--- a/Game/Game.fsproj
+++ b/Game/Game.fsproj
@@ -5,14 +5,11 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <Compile Include="Domain.fs" />
-        <Compile Include="Core.fs" />
-        <Compile Include="Snake.fs" />
-        <Compile Include="Rpg.fs" />
+      <ProjectReference Include="..\GameEngine\GameEngine.fsproj" />
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\GameEngine\GameEngine.fsproj" />
+      <Compile Include="Init.fs" />
     </ItemGroup>
 
 </Project>
