--- a/Sandbox/Sandbox.fsproj
+++ b/Sandbox/Sandbox.fsproj
@@ -4,4 +4,10 @@
         <TargetFramework>netcoreapp3.1</TargetFramework>
     </PropertyGroup>
 
+    <ItemGroup>
+      <Compile Include="Snake.fs" />
+      <Compile Include="Rpg.fs" />
+      <Compile Include="Domain.fs" />
+    </ItemGroup>
+
 </Project>
