--- a/ConsoleOutput/ConsoleOutput.fsproj
+++ b/ConsoleOutput/ConsoleOutput.fsproj
@@ -6,10 +6,12 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <Compile Include="Ui.fs" />
         <Compile Include="Program.fs" />
     </ItemGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\ConsoleInput\ConsoleInput.fsproj" />
       <ProjectReference Include="..\GameEngine\GameEngine.fsproj" />
       <ProjectReference Include="..\Game\Game.fsproj" />
       <ProjectReference Include="..\Parser\Parser.fsproj" />
