--- a/GameEngine/GameEngine.fsproj
+++ b/GameEngine/GameEngine.fsproj
@@ -7,9 +7,11 @@
 
     <ItemGroup>
       <Compile Include="Domain.fs" />
-      <Compile Include="Input.fs" />
       <Compile Include="Output.fs" />
+      <Compile Include="Command.fs" />
+      <Compile Include="Input.fs" />
       <Compile Include="CreateGame.fs" />
+      <Compile Include="GameLogic.fs" />
       <Compile Include="Core.fs" />
       <Compile Include="Common.fs" />
       <Compile Include="State.fs" />
