--- a/Sandbox/Sandbox.fsproj
+++ b/Sandbox/Sandbox.fsproj
@@ -8,6 +8,8 @@
       <Compile Include="Snake.fs" />
       <Compile Include="Rpg.fs" />
       <Compile Include="Domain.fs" />
+      <Compile Include="statemonad.fs" />
+      <Compile Include="CommandBackup.fs" />
     </ItemGroup>
 
 </Project>
