--- a/ConsoleOutput/ConsoleOutput.fsproj
+++ b/ConsoleOutput/ConsoleOutput.fsproj
@@ -6,8 +6,11 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <Compile Include="Ui.fs" />
         <Compile Include="Program.fs" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\GameEngine\GameEngine.fsproj" />
     </ItemGroup>
 
 </Project>
