--- a/ConsoleOutput/ConsoleOutput.fsproj
+++ b/ConsoleOutput/ConsoleOutput.fsproj
@@ -12,6 +12,7 @@
     <ItemGroup>
       <ProjectReference Include="..\GameEngine\GameEngine.fsproj" />
       <ProjectReference Include="..\Game\Game.fsproj" />
+      <ProjectReference Include="..\Parser\Parser.fsproj" />
     </ItemGroup>
 
 </Project>
