--- a/Parser/Parser.fsproj
+++ b/Parser/Parser.fsproj
@@ -5,6 +5,8 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <Compile Include="Domain.fs" />
+        <Compile Include="Parsers.fs" />
         <Compile Include="Core.fs" />
         <Content Include="Readme.md" />
     </ItemGroup>
