--- a/GameEngine/GameEngine.fsproj
+++ b/GameEngine/GameEngine.fsproj
@@ -8,6 +8,10 @@
     <ItemGroup>
       <Compile Include="Domain.fs" />
       <Compile Include="Common.fs" />
+      <Compile Include="SkogixIO.fs" />
+      <Compile Include="GameInit.fs" />
+      <Compile Include="Agents.fs" />
+      <Compile Include="Game.fs" />
     </ItemGroup>
 
     <ItemGroup>
