--- a/Game/Game.fsproj
+++ b/Game/Game.fsproj
@@ -9,4 +9,8 @@
       <ProjectReference Include="..\Parser\Parser.fsproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Compile Include="Game.fs" />
+    </ItemGroup>
+
 </Project>
