--- a/Game/Game.fsproj
+++ b/Game/Game.fsproj
@@ -10,6 +10,8 @@
     </ItemGroup>
 
     <ItemGroup>
+      <Compile Include="Domain.fs" />
+      <Compile Include="Components.fs" />
       <Compile Include="Game.fs" />
     </ItemGroup>
 
