rework 0.5, går åt oo-datastructs för components + mutable :(

--- a/GameEngine/GameEngine.fsproj
+++ b/GameEngine/GameEngine.fsproj
@@ -9,4 +9,8 @@
       <ProjectReference Include="..\Skogix\Skogix.fsproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Compile Include="GameEngine.fs" />
+    </ItemGroup>
+
 </Project>
