--- a/Game/Game.fsproj
+++ b/Game/Game.fsproj
@@ -12,7 +12,7 @@
     <ItemGroup>
       <Compile Include="Domain.fs" />
       <Compile Include="Components.fs" />
-      <Compile Include="Game.fs" />
+      <Compile Include="Systems.fs" />
     </ItemGroup>
 
 </Project>
